--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 
-spring.datasource.url= jdbc:mysql://localhost:3306/vmo_spring?useSSL=false
+spring.datasource.url= jdbc:mysql://localhost:3306/vmo_spring?allowPublicKeyRetrieval=true&useSSL=False
 spring.datasource.username= root
 spring.datasource.password= 123456
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto= update
 
-server.port=8086
+server.port=8088
 # App Properties
 sonka.app.jwtSecret= sonKaSecretKey
 sonka.app.jwtExpirationMs= 13041999
