--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,18 @@
-
-spring.datasource.url= jdbc:mysql://localhost:3306/vmo_spring?allowPublicKeyRetrieval=true&useSSL=False
+#
+spring.datasource.url= jdbc:mysql://localhost:3306/vmo_spring111?allowPublicKeyRetrieval=true&useSSL=False
 spring.datasource.username= root
 spring.datasource.password= 123456
 
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto= update
+spring.jpa.properties.hibernate.format_sql=true
+
 
 server.port=8088
 # App Properties
